[build-system]
requires = ["setuptools>=61.0", "cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "relplot"
version = "1.0.3"
authors = [
  { name="Preetum Nakkiran" },
  { name="Jarosław Błasiok" }
]
description = "Compute and plot reliability diagrams based on calibration distance."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file="LICENSE" }
dependencies = [
  "numpy",
  "scipy",
  "pandas",
  "matplotlib",
  "scikit-learn",
  "seaborn",
  "deprecation"
]

[project.urls]
"Homepage" = "https://github.com/apple/ml-calibration"

